--- a/app/src/main/res/layout/fragment_service_list.xml
+++ b/app/src/main/res/layout/fragment_service_list.xml
@@ -10,7 +10,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.design.widget.FloatingActionButton
+    <ProgressBar
+        android:id="@+id/service_list_progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+
+    <android.support.design.widget.FloatingActionButton
             android:id="@+id/floating_add_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
