--- a/app/src/main/res/layout/sale_adapter.xml
+++ b/app/src/main/res/layout/sale_adapter.xml
@@ -6,41 +6,62 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/array_adapter_sales_service"
-        android:layout_width="fill_parent"
-        android:layout_height="32dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
         android:layout_gravity="center"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:text="@string/default_string"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        card_view:cardElevation="4dp"
+        card_view:cardCornerRadius="4dp"
+        card_view:layout_constraintTop_toTopOf="parent"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintEnd_toEndOf="parent">
 
-    <TextView
-        android:id="@+id/array_adapter_sales_price"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:layout_gravity="center"
-        android:layout_marginStart="16dp"
-        android:text="@string/default_string"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/array_adapter_sales_service" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/array_adapter_sales_date"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_gravity="center"
-        android:gravity="right"
-        android:layout_marginEnd="16dp"
-        android:text="@string/default_string"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/array_adapter_sales_service" />
+            <TextView
+                android:id="@+id/array_adapter_sales_service"
+                android:layout_width="fill_parent"
+                android:layout_height="32dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:layout_gravity="center"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:text="@string/default_string"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/array_adapter_sales_price"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:text="@string/default_string"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/array_adapter_sales_service" />
+
+            <TextView
+                android:id="@+id/array_adapter_sales_date"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_gravity="center"
+                android:gravity="right"
+                android:layout_marginEnd="16dp"
+                android:text="@string/default_string"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/array_adapter_sales_service" />
+
+
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
